--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,6 @@
 @import url('./_header.css');
 @import url('./_main.css');
 @import url('./_about.css');
+@import url('./_prof.css');
+@import url('./_testm.css');
+@import url('./_contact.css');
