--- a/css/_geral.css
+++ b/css/_geral.css
@@ -3,6 +3,12 @@
   margin: 0 auto;
 }
 
+.logo {
+  font-family: var(--font-display);
+  font-size: 4rem;
+  margin: 34px 0 34px 120px;
+}
+
 .red {
   color: var(--p01);
 }
@@ -35,6 +41,7 @@
 }
 
 .btn-green {
+  box-sizing: border-box;
   font-family: var(--font-display);
   font-size: 1.125rem;
   line-height: 1.5rem;
@@ -61,10 +68,15 @@
   .btn-red, .btn-green {
     font-size: .8rem;
   }
+
+  .btn-green {
+    margin: 2.125rem 3rem 2.125rem 0;
+  }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 430px) {
   .btn-red, .btn-green {
-    margin: 1rem 0 1rem 1rem;
+    margin: 1rem;
   }
+  
 }
